force-app/main/default/objects/Contract/fields/Batch_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Processed_Date__c</fullName>
    <description>Date when the automated batch job evaluated this contract</description>
    <label>Batch Processed Date</label>
    <type>Date</type>
</CustomField>