force-app/main/default/objects/Contract/fields/Opportunity_Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Event_End_Date__c</fullName>
    <formula>Opportunity__r.Event_End_Date__c</formula>
    <label>Opportunity Event End Date</label>
    <type>Date</type>
</CustomField>